--- a/studentjobs.html
+++ b/studentjobs.html
@@ -96,7 +96,7 @@
     <title>InterLink</title>
   </head>
   <body>
-    <nav class="z-100 w-full border flex flex-row justify-between px-4 py-4">
+    <nav class="z-100 w-full border-b flex flex-row justify-between px-4 py-4">
       <div>
         <svg
           id="sidebarToggle"
