--- a/studentprof.html
+++ b/studentprof.html
@@ -66,10 +66,10 @@
         box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
           rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
       }
-      /* Active link style */
+
       .text-nav.active {
-        background-color: #1e1e1e; /* Optional: Change this to the desired active background color */
-        color: white; /* Set active text color */
+        background-color: #1e1e1e;
+        color: white;
         border-radius: 6px;
       }
 
