--- a/studentjobs.html
+++ b/studentjobs.html
@@ -91,12 +91,28 @@
       .text-nav.active svg {
         stroke: white;
       }
+      .custom-hidden {
+        display: none;
+      }
+      .custom-block {
+        display: block;
+      }
+      .custom-absolute {
+        position: absolute;
+      }
+      .custom-rounded-md {
+        border-radius: 0.375rem;
+      }
+      .custom-shadow-lg {
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+          0 4px 6px -2px rgba(0, 0, 0, 0.05);
+      }
     </style>
 
     <title>InterLink</title>
   </head>
   <body>
-    <nav class="z-100 w-full border-b flex flex-row justify-between px-4 py-4">
+    <nav class="z-100 w-full border flex flex-row justify-between px-4 py-4">
       <div>
         <svg
           id="sidebarToggle"
@@ -132,11 +148,13 @@
           <path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9" />
           <path d="M10.3 21a1.94 1.94 0 0 0 3.4 0" />
         </svg>
-        <div class="flex flex-row">
+        <div
+          class="relative custom-profile flex flex-row items-center cursor-pointer"
+        >
           <div class="w-[25px] h-[24px] rounded-full">
             <img
               src="./img/Group 136.png"
-              alt=""
+              alt="Profile"
               class="w-full h-full object-cover"
             />
           </div>
@@ -154,6 +172,36 @@
           >
             <path d="m6 9 6 6 6-6" />
           </svg>
+          <div
+            id="custom-dropdownMenu"
+            class="custom-hidden custom-absolute z-10 top-8 right-0 mt-2 w-48 bg-white border custom-rounded-md custom-shadow-lg"
+          >
+            <a
+              href="#"
+              class="custom-block px-4 py-2 text-gray-700 hover:bg-gray-100"
+              >Profile</a
+            >
+            <a
+              href="#"
+              class="custom-block px-4 py-2 text-gray-700 hover:bg-gray-100"
+              >Edit Profile</a
+            >
+            <a
+              href="#"
+              class="custom-block px-4 py-2 text-gray-700 hover:bg-gray-100"
+              >About Us</a
+            >
+            <a
+              href="#"
+              class="custom-block px-4 py-2 text-gray-700 hover:bg-gray-100"
+              >Contact Us</a
+            >
+            <a
+              href="#"
+              class="custom-block px-4 py-2 text-gray-700 hover:bg-gray-100"
+              >Logout</a
+            >
+          </div>
         </div>
       </div>
     </nav>
@@ -1721,6 +1769,12 @@
       for (let i = 0; i < cards.length; i++) {
         cards[i].style.backgroundColor = getRandomColor();
       }
+      document
+        .querySelector(".custom-profile")
+        .addEventListener("click", function () {
+          const dropdownMenu = document.getElementById("custom-dropdownMenu");
+          dropdownMenu.classList.toggle("custom-hidden");
+        });
     </script>
   </body>
 </html>
