--- a/studentjobs.html
+++ b/studentjobs.html
@@ -505,6 +505,7 @@
           <div class="">
             <button
               class="text-xs bg-black text-white py-1 px-3 rounded-md font-semibold"
+              onclick="goToDeet()"
             >
               Details
             </button>
@@ -1775,6 +1776,9 @@
           const dropdownMenu = document.getElementById("custom-dropdownMenu");
           dropdownMenu.classList.toggle("custom-hidden");
         });
+      function goToDeet(event) {
+        window.location.href = "jobdetails.html";
+      }
     </script>
   </body>
 </html>
