--- a/coordinator/applicants.html
+++ b/coordinator/applicants.html
@@ -348,7 +348,7 @@
                 <path d="M22 13a18.15 18.15 0 0 1-20 0" />
                 <rect width="20" height="14" x="2" y="6" rx="2" />
               </svg>
-              <span class="ms-3">Job Posting</span>
+              <span class="ms-3">Jobs</span>
             </a>
           </li>
           <li>
@@ -390,7 +390,7 @@
                 <circle cx="9" cy="7" r="4" />
                 <polyline points="16 11 18 13 22 9" />
               </svg>
-              <span class="ms-3">Trainees</span>
+              <span class="ms-3">Deployed</span>
             </a>
           </li>
           <li>
@@ -405,15 +405,14 @@
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="lucide lucide-clipboard-check"
+                class="lucide lucide-rectangle-ellipsis"
               >
-                <rect width="8" height="4" x="8" y="2" rx="1" ry="1" />
-                <path
-                  d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
-                />
-                <path d="m9 14 2 2 4-4" />
+                <rect width="20" height="12" x="2" y="6" rx="2" />
+                <path d="M12 12h.01" />
+                <path d="M17 12h.01" />
+                <path d="M7 12h.01" />
               </svg>
-              <span class="ms-3">Published Jobs</span>
+              <span class="ms-3">Pending </span>
             </a>
           </li>
         </ul>
@@ -468,6 +467,10 @@
             <circle cx="11" cy="11" r="8" />
             <path d="m21 21-4.3-4.3" />
           </svg>
+        </div>
+        <div class="flex gap-4 mt-2">
+          <a href="" class="underline text-">Qualified</a>
+          <a href="" class="text-[#808185]">Overall</a>
         </div>
         <div
           class="w-full grid items-center justify-evenly mx-auto mt-5 grid-cols-4 gap-5"
@@ -534,45 +537,324 @@
               ><button
                 class="remove-photo px-2 py-1 rounded-sm text-sm font-medium"
               >
-                Accept student
+                Deploy student
+              </button>
+            </div>
+          </div>
+          <div
+            class="w-full flex flex-col border border-black p-2 gap-4 rounded-md"
+          >
+            <div class="w-full flex flex-row gap-1">
+              <div>
+                <img
+                  src="../img/Group 136.png"
+                  alt=""
+                  class="w-[50px] h-[50px]"
+                />
+              </div>
+              <div>
+                <h1 class="font-semibold text-lg">Clarence Ariel V. Pamilar</h1>
+                <p class="text-[#7F7575] text-sm">SUM2021-01815</p>
+                <p class="text-[#7F7575] text-sm">BSIT-4G</p>
+              </div>
+            </div>
+            <div class="flex flex-wrap w-full gap-2">
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Front-End</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Back-End</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">MySQL</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded col-span-2 flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Communication</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Frameworks</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Fast Learner</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Node.js</p>
+              </div>
+            </div>
+            <div class="flex flex-row justify-between">
+              <button
+                class="change-photo px-2 py-1 text-sm rounded-sm font-medium"
+              >
+                View profile</button
+              ><button
+                class="remove-photo px-2 py-1 rounded-sm text-sm font-medium"
+              >
+                Deploy student
+              </button>
+            </div>
+          </div>
+          <div
+            class="w-full flex flex-col border border-black p-2 gap-4 rounded-md"
+          >
+            <div class="w-full flex flex-row gap-1">
+              <div>
+                <img
+                  src="../img/Group 136.png"
+                  alt=""
+                  class="w-[50px] h-[50px]"
+                />
+              </div>
+              <div>
+                <h1 class="font-semibold text-lg">Clarence Ariel V. Pamilar</h1>
+                <p class="text-[#7F7575] text-sm">SUM2021-01815</p>
+                <p class="text-[#7F7575] text-sm">BSIT-4G</p>
+              </div>
+            </div>
+            <div class="flex flex-wrap w-full gap-2">
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Front-End</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Back-End</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">MySQL</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded col-span-2 flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Communication</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Frameworks</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Fast Learner</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Node.js</p>
+              </div>
+            </div>
+            <div class="flex flex-row justify-between">
+              <button
+                class="change-photo px-2 py-1 text-sm rounded-sm font-medium"
+              >
+                View profile</button
+              ><button
+                class="remove-photo px-2 py-1 rounded-sm text-sm font-medium"
+              >
+                Deploy student
+              </button>
+            </div>
+          </div>
+          <div
+            class="w-full flex flex-col border border-black p-2 gap-4 rounded-md"
+          >
+            <div class="w-full flex flex-row gap-1">
+              <div>
+                <img
+                  src="../img/Group 136.png"
+                  alt=""
+                  class="w-[50px] h-[50px]"
+                />
+              </div>
+              <div>
+                <h1 class="font-semibold text-lg">Clarence Ariel V. Pamilar</h1>
+                <p class="text-[#7F7575] text-sm">SUM2021-01815</p>
+                <p class="text-[#7F7575] text-sm">BSIT-4G</p>
+              </div>
+            </div>
+            <div class="flex flex-wrap w-full gap-2">
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Front-End</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Back-End</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">MySQL</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded col-span-2 flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Communication</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Frameworks</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Fast Learner</p>
+              </div>
+              <div
+                class="bg-button h-6 rounded flex items-center justify-center px-2"
+              >
+                <p class="text-center text-white text-[10px]">Node.js</p>
+              </div>
+            </div>
+            <div class="flex flex-row justify-between">
+              <button
+                class="change-photo px-2 py-1 text-sm rounded-sm font-medium"
+              >
+                View profile</button
+              ><button
+                class="remove-photo px-2 py-1 rounded-sm text-sm font-medium"
+              >
+                Deploy student
               </button>
             </div>
           </div>
         </div>
       </div>
-    </main>
-    <script>
-      const sidebar = document.getElementById("default-sidebar");
-      const sidebarToggle = document.getElementById("sidebarToggle");
-      const overlay = document.getElementById("overlay");
+      <script>
+        const skills = [
+          "HTML",
+          "CSS",
+          "JavaScript",
+          "Python",
+          "Java",
+          "C#",
+          "PHP",
+          "Ruby",
+          "C++",
+          "SQL",
+        ];
+        let selectedSkills = [];
+        const dropdownContent = document.getElementById("dropdown-content");
+        const inputField = document.getElementById("skills");
+        const inputContainer = document.getElementById("input-container");
 
-      sidebarToggle.addEventListener("click", () => {
-        sidebar.classList.toggle("show");
-        overlay.classList.toggle("show");
-      });
+        function showDropdown() {
+          dropdownContent.classList.add("show");
+        }
 
-      overlay.addEventListener("click", () => {
-        sidebar.classList.remove("show");
-        overlay.classList.remove("show");
-      });
+        function hideDropdown() {
+          setTimeout(() => {
+            dropdownContent.classList.remove("show");
+            inputField.value = "";
+          }, 200);
+        }
 
-      document.addEventListener("click", (event) => {
-        if (
-          !sidebar.contains(event.target) &&
-          !sidebarToggle.contains(event.target) &&
-          sidebar.classList.contains("show")
-        ) {
+        function filterFunction() {
+          const filter = inputField.value.toUpperCase();
+          dropdownContent.innerHTML = "";
+          let matchedSkills = skills.filter(
+            (skill) =>
+              skill.toUpperCase().includes(filter) &&
+              !selectedSkills.includes(skill)
+          );
+
+          if (matchedSkills.length === 0 && filter !== "") {
+            matchedSkills = [`Add "${inputField.value}"`];
+          }
+
+          matchedSkills.forEach((skill) => {
+            const div = document.createElement("div");
+            div.textContent = skill;
+            div.onclick = function () {
+              if (skill.startsWith("Add")) {
+                skills.push(inputField.value);
+                selectedSkills.push(inputField.value);
+              } else {
+                selectedSkills.push(skill);
+              }
+              inputField.value = "";
+              updateSelectedSkills();
+              dropdownContent.classList.remove("show");
+            };
+            dropdownContent.appendChild(div);
+          });
+
+          dropdownContent.classList.add("show");
+        }
+
+        function updateSelectedSkills() {
+          inputContainer.innerHTML = "";
+          selectedSkills.forEach((skill) => {
+            const skillTag = document.createElement("div");
+            skillTag.className = "skill-tag";
+            skillTag.innerHTML = `<span>${skill}</span><button onclick="removeSkill('${skill}')">&times;</button>`;
+            inputContainer.appendChild(skillTag);
+          });
+          inputContainer.appendChild(inputField);
+          inputField.focus();
+        }
+
+        function removeSkill(skill) {
+          selectedSkills = selectedSkills.filter((s) => s !== skill);
+          updateSelectedSkills();
+        }
+
+        function focusInput() {
+          inputField.focus();
+        }
+        //sidebar
+        const sidebar = document.getElementById("default-sidebar");
+        const sidebarToggle = document.getElementById("sidebarToggle");
+        const overlay = document.getElementById("overlay");
+
+        sidebarToggle.addEventListener("click", () => {
+          sidebar.classList.toggle("show");
+          overlay.classList.toggle("show");
+        });
+
+        overlay.addEventListener("click", () => {
           sidebar.classList.remove("show");
           overlay.classList.remove("show");
-        }
-      });
-
-      document
-        .querySelector(".custom-profile")
-        .addEventListener("click", function () {
-          const dropdownMenu = document.getElementById("custom-dropdownMenu");
-          dropdownMenu.classList.toggle("custom-hidden");
         });
-    </script>
+
+        document.addEventListener("click", (event) => {
+          if (
+            !sidebar.contains(event.target) &&
+            !sidebarToggle.contains(event.target) &&
+            sidebar.classList.contains("show")
+          ) {
+            sidebar.classList.remove("show");
+            overlay.classList.remove("show");
+          }
+        });
+        document
+          .querySelector(".custom-profile")
+          .addEventListener("click", function () {
+            const dropdownMenu = document.getElementById("custom-dropdownMenu");
+            dropdownMenu.classList.toggle("custom-hidden");
+          });
+      </script>
+    </main>
   </body>
 </html>
