--- a/studentprof.html
+++ b/studentprof.html
@@ -59,9 +59,6 @@
         border-radius: 6px;
       }
 
-      .custom-shadow {
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      }
       .custom-sideborder {
         box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
           rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
@@ -97,7 +94,7 @@
     <title>InterLink</title>
   </head>
   <body>
-    <nav class="z-100 w-full border flex flex-row justify-between px-4 py-4">
+    <nav class="z-100 w-full border-b flex flex-row justify-between px-4 py-4">
       <div>
         <svg
           id="sidebarToggle"
@@ -118,21 +115,36 @@
         </svg>
       </div>
       <div class="flex flex-row gap-5">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="lucide lucide-bell"
-        >
-          <path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9" />
-          <path d="M10.3 21a1.94 1.94 0 0 0 3.4 0" />
-        </svg>
+        <div class="relative">
+          <svg
+            id="notificationIcon"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-bell cursor-pointer"
+          >
+            <path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9" />
+            <path d="M10.3 21a1.94 1.94 0 0 0 3.4 0" />
+          </svg>
+          <div
+            id="notificationDropdown"
+            class="hidden absolute top-8 right-0 mt-2 w-48 bg-white border rounded-md shadow-lg"
+          >
+            <a href="#" class="block py-2 text-gray-700 hover:bg-gray-100"
+              ><div class="border p-1 w-full flex flex-col">
+                <h1>Title</h1>
+                <p>description</p>
+                <p>time</p>
+              </div></a
+            >
+          </div>
+        </div>
         <div
           class="relative custom-profile flex flex-row items-center cursor-pointer"
         >
@@ -159,7 +171,7 @@
           </svg>
           <div
             id="custom-dropdownMenu"
-            class="custom-hidden custom-absolute top-8 right-0 mt-2 w-48 bg-white border custom-rounded-md custom-shadow-lg"
+            class="custom-hidden custom-absolute z-10 top-8 right-0 mt-2 w-48 bg-white border custom-rounded-md custom-shadow-lg"
           >
             <a
               href="#"
@@ -544,5 +556,6 @@
           dropdownMenu.classList.toggle("custom-hidden");
         });
     </script>
+    <script src="notif.js"></script>
   </body>
 </html>
